# synthetic-data-generator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/synthetic_data_generator/: cli.py
tests/: test_cli.py
