[project]
name = "synthetic-data-generator"
version = "0.4.0"
description = "CLI tool for generating synthetic test data in CSV format"
requires-python = ">=3.10"
dependencies = ["faker"]

[project.scripts]
syngen = "synthetic_data_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
